@@ -5,6 +5,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Add ``update_security`` helper.
+  [jone]
+
 - Fix incomplete status info entry prodcued by
   placeful workflow policy activator.
   [jone]
